--- a/reddit.minecraft.user.css
+++ b/reddit.minecraft.user.css
@@ -5,7 +5,7 @@
   display: none !important;
 }
 
-/* Remove cute mob heads near to people’s usernames */
+/* Remove cute mob heads next to people’s usernames */
 .content .flair-blaze,
 .content .flair-cavespider,
 .content .flair-chicken,
