--- a/slack.user.css
+++ b/slack.user.css
@@ -112,7 +112,7 @@
   white-space: nowrap !important;
 }
 
-.light_theme .message.divider + .message:not(.divider) .timestamp {
+.light_theme .message.divider ~ .message:not(.divider) .timestamp {
   top: 3px !important;
   right: 25px !important;
 }
@@ -122,8 +122,8 @@
   top: 7px !important;
 }
 
-.light_theme .message.divider + .message:not(.divider)  .message_star_holder,
-.light_theme .message.divider + .message:not(.divider) .msg_actions {
+.light_theme .message.divider ~ .message:not(.divider)  .message_star_holder,
+.light_theme .message.divider ~ .message:not(.divider) .msg_actions {
   top: 0 !important;
 }
 
